--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "cvm/googletagmanager",
     "description": "Google Tag Manager extension for Magento",
     "type": "magento-module",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "module": {
         "package": "CVM",
         "name": "GoogleTagManager",
@@ -21,9 +21,11 @@
         "skin": "default",
         "domain": "tengisa.co.za"
     },
-    "keywords":["magento","module"],
-    "repositories":
-    [
+    "keywords": [
+        "magento",
+        "module"
+    ],
+    "repositories": [
         {
             "type": "composer",
             "url": "http://packages.firegento.com"
@@ -33,8 +35,7 @@
             "url": "http://pack-tengisa.cloudapp.net"
         }
     ],
-    "require":
-    {
+    "require": {
         "php": ">=5.4.0",
         "magento-hackathon/magento-composer-installer": "~3.0",
         "ecomdev/ecomdev_phpunit": "~0.3",
@@ -51,8 +52,7 @@
         "modman-root-dir": ".modman"
     },
     "scripts": {
-        "post-update-cmd":
-        [
+        "post-update-cmd": [
             "bash bin/modman repair",
             "rm -rf magento/var/cache/",
             "bin/mage-ci phpunit magento --colors"
